# Rusty-JavaC

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.github/workflows/: build.yml
crates/javac-ast/: Cargo.toml
crates/javac-ast/src/: ast.rs  lib.rs
crates/javac-bytecode/: Cargo.toml
crates/javac-bytecode/src/: class_gen.rs  codegen.rs  error.rs  expr_gen.rs  lambda.rs  lib.rs  local_var.rs  method_gen.rs  stmt_gen.rs  validation.rs
crates/javac-bytecode/src/expr_gen/: arrays.rs  assign.rs  branch.rs  calls.rs  convert.rs  literals.rs  ops.rs  switch.rs  types.rs  values.rs
crates/javac-bytecode/src/validation/: diagnostic.rs  scope.rs
crates/javac-call-resolver/: Cargo.toml
crates/javac-call-resolver/src/: catalog.rs  java_io.rs  java_lang.rs  javax.rs  lib.rs  platform.rs  system.rs
crates/javac-call-resolver/src/calls/: java_io.rs  java_lang.rs  mod.rs  system.rs
crates/javac-call-resolver/src/platform/: java_io.rs  java_lang.rs  java_math.rs  java_time.rs  java_util.rs  java_util_function.rs  mod.rs
crates/javac-classfile/: Cargo.toml
crates/javac-classfile/src/: access_flags.rs  constant_pool.rs  lib.rs  reader.rs  version.rs  writer.rs
crates/javac-compiler/: Cargo.toml
crates/javac-compiler/src/: classpath.rs  compiler.rs  config.rs  lib.rs  pipeline.rs
crates/javac-compiler/tests/: compiler_tests.rs
crates/javac-diagnostics/: Cargo.toml
crates/javac-diagnostics/src/: lib.rs
crates/javac-hir/: Cargo.toml
crates/javac-hir/src/: body.rs  hir.rs  infer.rs  item.rs  lib.rs  lowering.rs  name_resolver.rs
crates/javac-hir/src/lowering/: error.rs  expr.rs  literal.rs  member.rs  modifiers.rs  signature.rs  stmt.rs  syntax.rs  types.rs  unit.rs
crates/javac-lexer/: Cargo.toml
crates/javac-lexer/src/: lib.rs  token.rs  unicode_esc.rs
crates/javac-parser/: Cargo.toml
crates/javac-parser/src/: lib.rs  parser.rs  syntax_error.rs
crates/javac-parser/src/parser/: expr.rs  member.rs  mod.rs  stmt.rs  top_level.rs  ty.rs  type_decl.rs
crates/javac-parser/tests/: parse_tests.rs
crates/javac-parser/tests/java/: ControlFlow.java  Expressions.java  Java21Features.java
crates/javac-ty/: Cargo.toml
crates/javac-ty/src/: check.rs  class_sig.rs  descriptor.rs  erasure.rs  lib.rs  method_sig.rs  ty.rs
examples/: compiler-example.rs
examples/compiler-example/: Cargo.toml
examples/compiler-example/src/: main.rs
gradle/demo/src/main/java/com/example/: Classes.java  Expressions.java  ModernJavaFeatures.java
gradle/demo/src/main/java/com/example/modern/switches/: SwitchExpressionCases.java
gradle/gradle-plugin/src/main/kotlin/com/rustyjavac/gradle/: CompileRustyJavaCTask.kt  RustyJavaCExtension.kt  RustyJavaCPlugin.kt
src/: lib.rs
src/ast/: mod.rs  nodes.rs
src/bytecode/: class_gen.rs  codegen.rs  error.rs  expr_gen.rs  lambda.rs  local_var.rs  method_gen.rs  stmt_gen.rs  validation.rs
src/bytecode/expr_gen/: arrays.rs  assign.rs  branch.rs  calls.rs  convert.rs  literals.rs  mod.rs  ops.rs  switch.rs  types.rs  values.rs
src/bytecode/validation/: diagnostic.rs  mod.rs  scope.rs
src/call_resolver/: catalog.rs  mod.rs
src/call_resolver/platform/: java_io.rs  java_lang.rs  java_net.rs  java_nio_file.rs  mod.rs
src/classfile/: constant_pool.rs  mod.rs  reader.rs  writer.rs
src/compiler/: classpath.rs  diagnostic.rs  driver.rs  incremental.rs  mod.rs  pipeline.rs
src/compiler/classpath/: source.rs
src/hir/: infer.rs  lowering.rs  mod.rs  model.rs  name_resolver.rs
src/hir/lowering/: annotation.rs  anonymous.rs  enum_decl.rs  expr.rs  literal.rs  member.rs  mod.rs  modifiers.rs  record.rs  signature.rs  stmt.rs  syntax.rs  types.rs  unit.rs
src/lexer/: mod.rs  token.rs  unicode_esc.rs
src/parser/: core.rs  display.rs  expr.rs  mod.rs  top_level.rs  ty.rs
src/ty/: check.rs  class_sig.rs  descriptor.rs  method_sig.rs  mod.rs
tests/: parse_tests.rs
tests/java/: AnonymousClasses.java  Classes.java  ControlFlow.java  CustomAnnotationFeature.java  EnumFeature.java  GuessNumberGame.java  JavaPlatformCalls.java  PlatformResolution.java  RecordFeature.java  StaticStateBattle.java  TypeInference.java
