[workspace]
members = [
    "crates/javac-ast",
    "crates/javac-lexer",
    "crates/javac-parser",
    "crates/javac-hir",
    "crates/javac-ty",
    "crates/javac-call-resolver",
    "crates/javac-bytecode",
    "crates/javac-classfile",
    "crates/javac-diagnostics",
    "crates/javac-compiler",
    "examples/compiler-example",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Eatgrapes"]
repository = "https://github.com/Eatgrapes/Rusty-JavaC"
description = "A Java compiler written in Rust."
readme = "README.md"
keywords = ["java", "compiler", "jvm", "bytecode", "parser"]
categories = ["compilers"]

[workspace.dependencies]
thiserror = "2.0"
text-size = "1.1"
rowan = "0.16"
logos = "0.16"

rust-asm = { version = "0.2", features = ["macros"] }

javac-ast = { version = "0.1.0", path = "crates/javac-ast" }
javac-bytecode = { version = "0.1.0", path = "crates/javac-bytecode" }
javac-call-resolver = { version = "0.1.0", path = "crates/javac-call-resolver" }
javac-classfile = { version = "0.1.0", path = "crates/javac-classfile" }
javac-compiler = { version = "0.1.0", path = "crates/javac-compiler" }
javac-diagnostics = { version = "0.1.0", path = "crates/javac-diagnostics" }
javac-hir = { version = "0.1.0", path = "crates/javac-hir" }
javac-lexer = { version = "0.1.0", path = "crates/javac-lexer" }
javac-parser = { version = "0.1.0", path = "crates/javac-parser" }
javac-ty = { version = "0.1.0", path = "crates/javac-ty" }
