[package]
name = "rusty-javac"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Eatgrapes"]
repository = "https://github.com/Eatgrapes/Rusty-JavaC"
description = "A Java compiler written in Rust."
readme = "README.md"
keywords = ["java", "compiler", "jvm", "bytecode", "parser"]
categories = ["compilers"]

[dependencies]
la-arena = "0.3.1"
logos = "0.16"
rowan = "0.16"
rust-asm = { version = "0.2", features = ["macros"] }
text-size = "1.1"
thiserror = "2.0"
ustr = "1.1.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
