[package]
name = "javac-call-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
javac-ty = { workspace = true }
rust-asm = { workspace = true }
ustr = "1.1.0"
