[package]
name = "javac-classfile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rust-asm = { workspace = true }
thiserror = { workspace = true }
