[package]
name = "javac-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
javac-ast = { workspace = true }
javac-lexer = { workspace = true }
javac-parser = { workspace = true }
javac-hir = { workspace = true }
javac-ty = { workspace = true }
javac-bytecode = { workspace = true }
javac-classfile = { workspace = true }
javac-call-resolver = { workspace = true }
javac-diagnostics = { workspace = true }
rust-asm = { workspace = true }
text-size = { workspace = true }
ustr = "1.1.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
