[package]
name = "javac-hir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
javac-ast = { path = "../javac-ast" }
javac-call-resolver = { path = "../javac-call-resolver" }
javac-ty = { path = "../javac-ty" }
la-arena = "0.3.1"
thiserror = { workspace = true }
ustr = "1.1.0"
