[package]
name = "javac-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
javac-ast = { workspace = true }
javac-call-resolver = { workspace = true }
javac-ty = { workspace = true }
la-arena = "0.3.1"
thiserror = { workspace = true }
text-size = { workspace = true }
ustr = "1.1.0"
