[package]
name = "javac-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
javac-ast = { workspace = true }
javac-lexer = { workspace = true }
javac-diagnostics = { workspace = true }
rowan = { workspace = true }
text-size = { workspace = true }
