[package]
name = "javac-ty"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
javac-ast = { workspace = true }
thiserror = { workspace = true }
ustr = "1.1.0"
